--- a/ExternalProcessFunctions/ExternalProcessFunctions.csproj
+++ b/ExternalProcessFunctions/ExternalProcessFunctions.csproj
@@ -11,6 +11,7 @@
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.0.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.29" />
   </ItemGroup>
   <ItemGroup>
